# gctrl

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PRD.md  README.md  Request.md  TECH_SPEC.md  biome.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  wip.md
.claude/: settings.json
.claude/commands/: audit-specs.md  audit.md  cost-report.md  dispatch.md  review-specs.md  status.md  team.md  trace.md
.claude/hooks/: pre-pr-check.sh
.github/actions/setup-node/: action.yml
.github/workflows/: ci.yml  deploy.yml
apps/gctl-board/: PRD.md  WORKFLOW.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.workers.ts  wrangler.toml
apps/gctl-board/migrations/: 0001_init.sql  0002_sync_columns.sql
apps/gctl-board/scripts/: ensure-preview-d1.mjs
apps/gctl-board/specs/: architecture.md
apps/gctl-board/src/: index.ts  worker.ts
apps/gctl-board/test/: board-service.test.ts  deploy-smoke.test.ts  sync-d1.test.ts
apps/gctl-board/web/: index.html  tsconfig.app.json  vite.config.ts
apps/gctl-inbox/: PRD.md  WORKFLOW.md
apps/gctrl-board/: PRD.md  WORKFLOW.md  package.json  playwright.config.ts  wrangler.toml
apps/gctrl-board/migrations/: 0001_init.sql
apps/gctrl-board/specs/: architecture.md  tracker.md
apps/gctrl-board/src/: d1.ts  worker.ts
apps/gctrl-board/test/: board-service.test.ts  deploy-smoke.test.ts  dispatch.test.ts  sync-d1.test.ts
apps/gctrl-board/web/: index.html  tsconfig.app.json  vite.config.ts
apps/gctrl-inbox/: PRD.md  WORKFLOW.md
apps/uebermensch/: .env.example  PRD.md  README.md  ROADMAP.md  WORKFLOW.md  package.json  tsconfig.json  tsup.config.ts
apps/uebermensch/specs/: architecture.md  briefing-pipeline.md  delivery.md  domain-model.md  eval.md  knowledge-base.md  profile.md
apps/uebermensch/src/: errors.ts  schemas.ts
apps/uebermensch/tests/: anthropic-llm.test.ts  brief.test.ts  budget.test.ts  candidates.test.ts  citations.test.ts  (+4 more)
board/BOARD/: BOARD-1.md  BOARD-10.md  BOARD-11.md  BOARD-12.md  BOARD-13.md  BOARD-14.md  BOARD-15.md  BOARD-16.md  BOARD-2.md  BOARD-3.md  BOARD-4.md  BOARD-5.md  BOARD-7.md  BOARD-9.md
board/INBOX/: INBOX-1.md  INBOX-2.md  INBOX-3.md  INBOX-4.md  INBOX-5.md  INBOX-6.md  INBOX-7.md  INBOX-8.md  INBOX-9.md
crates/gctl-cli/: Cargo.toml
crates/gctl-cli/src/: main.rs
crates/gctl-cli/src/commands/: analytics.rs  analytics_cost_breakdown.rs  analytics_daily.rs  analytics_scores.rs  auto_score.rs  check.rs  context.rs  mod.rs  net.rs  query.rs  serve.rs  sessions.rs  spans.rs  trace_tree.rs
crates/gctl-guardrails/: Cargo.toml
crates/gctl-net/: Cargo.toml
crates/gctl-net/src/: compact.rs  lib.rs
crates/gctl-otel/: Cargo.toml
crates/gctl-otel/src/: receiver.rs  span_processor.rs
crates/gctl-storage/: Cargo.toml
gctrl/BOARD/: BOARD-14.md  BOARD-15.md  BOARD-3.md  BOARD-6.md  BOARD-7.md  BOARD-8.md  BOARD-9.md
gctrl/INBOX/: INBOX-8.md
gctrl/personas/: devsecops.md  engineer.md  pm.md  qa.md  security.md  tech-lead.md  ux.md
kernel/crates/gctl-core/: Cargo.toml
kernel/crates/gctl-core/src/: config.rs  context.rs  lib.rs  memory.rs  types.rs
kernel/crates/gctl-net/: Cargo.toml
kernel/crates/gctl-net/src/: compact.rs  crawl.rs  error.rs  fetch.rs  lib.rs  storage.rs
kernel/crates/gctl-proxy/: Cargo.toml
kernel/crates/gctl-proxy/src/: lib.rs
kernel/crates/gctl-query/: Cargo.toml
kernel/crates/gctl-query/src/: executor.rs  lib.rs
kernel/crates/gctl-storage/: Cargo.toml
kernel/crates/gctl-storage/src/: board_markdown.rs  duckdb_store.rs  lib.rs  schema.rs  sqlite_store.rs
kernel/crates/gctl-sync/: Cargo.toml
kernel/crates/gctl-sync/src/: d1.rs  engine.rs  lib.rs  manifest.rs  parquet_export.rs  r2.rs
kernel/crates/gctrl-cli/: Cargo.toml
kernel/crates/gctrl-cli/src/: main.rs
kernel/crates/gctrl-cli/src/commands/: alert.rs  analytics.rs  analytics_cost.rs  analytics_cost_breakdown.rs  analytics_daily.rs  analytics_latency.rs  analytics_scores.rs  analytics_spans.rs  auto_score.rs  board.rs  check.rs  context.rs  mod.rs  net.rs  orch.rs  personas.rs  prompt.rs  query.rs  score.rs  serve.rs  sessions.rs  spans.rs  status.rs  tag.rs  trace_tree.rs  watch.rs
kernel/crates/gctrl-context/: Cargo.toml
kernel/crates/gctrl-context/src/: compact.rs  error.rs  fs.rs  lib.rs  store.rs
kernel/crates/gctrl-net/: Cargo.toml
kernel/crates/gctrl-net/src/: crawl.rs  error.rs  fetch.rs  lib.rs  render.rs  search.rs  storage.rs
kernel/crates/gctrl-orch/: Cargo.toml
kernel/crates/gctrl-orch/src/: agent.rs  config.rs  lib.rs  prompt.rs  worker.rs
kernel/crates/gctrl-orch/tests/: worker_dispatch.rs
kernel/crates/gctrl-otel/: Cargo.toml
kernel/crates/gctrl-otel/src/: lib.rs  receiver.rs  span_processor.rs
kernel/crates/gctrl-otel/tests/: board_move_triggers_task.rs  memory_routes.rs  net_routes.rs  pipeline.rs
kernel/crates/gctrl-proxy/: Cargo.toml
kernel/crates/gctrl-query/: Cargo.toml
kernel/crates/gctrl-query/src/: executor.rs
kernel/crates/gctrl-storage/: Cargo.toml
kernel/crates/gctrl-storage/src/: board_markdown.rs  duckdb_store.rs  lib.rs  persona_markdown.rs  sqlite_store.rs
kernel/crates/gctrl-storage/tests/: orchestrator_claim.rs  promote_issue_to_task.rs
kernel/crates/gctrl-sync/: Cargo.toml
kernel/crates/gctrl-sync/src/: d1.rs  engine.rs  lib.rs  manifest.rs  r2.rs
kernel/specs-lean4/: KernelSpec.lean  lake-manifest.json  style.md
shell/gctl-shell/: USAGE.md  package.json
shell/gctrl-shell/: package.json
specs/: comparison.md  glossary.md  prd.md  principles.md  wip.md
specs/architecture/: README.md  browser.md  domain-model.md  gctl-board.md  os.md  scheduler.md  session-trigger-from-board.md  skills.md  tracker.md
specs/formal/: lakefile.lean
specs/gctl/: PRD.md  ROADMAP.md  WORKFLOW.md
specs/gctrl/: PRD.md  ROADMAP.md  WORKFLOW.md
specs/implementation/: components.md  dogfood-drivers.md  orchestration.md  repo.md  skills.md  style-guide.md  testing.md
specs/references/: agent_orchestration.md
specs/team/: personas.md
(+302 files in other folders)
