[package]
name = "gctl-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gctl"
path = "src/main.rs"

[dependencies]
gctl-core = { path = "../gctl-core" }
gctl-storage = { path = "../gctl-storage" }
gctl-otel = { path = "../gctl-otel" }
gctl-guardrails = { path = "../gctl-guardrails" }
gctl-query = { path = "../gctl-query" }
gctl-net = { path = "../gctl-net" }
gctl-context = { path = "../gctl-context" }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
