[package]
name = "gctl-otel"
version.workspace = true
edition.workspace = true

[dependencies]
gctl-core = { path = "../gctl-core" }
gctl-storage = { path = "../gctl-storage" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
http = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
