[package]
name = "gctl-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
