[package]
name = "gctl-sync"
version.workspace = true
edition.workspace = true

[dependencies]
gctl-core = { path = "../gctl-core" }
gctl-storage = { path = "../gctl-storage" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
reqwest = { workspace = true }
duckdb = { workspace = true }

[dev-dependencies]
tempfile = "3"
