[package]
name = "gctrl-context"
version.workspace = true
edition.workspace = true

[dependencies]
gctrl-core = { path = "../gctrl-core" }
duckdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
dirs = "6"

[dev-dependencies]
tempfile = "3"
