[package]
name = "gctrl-orch"
version.workspace = true
edition.workspace = true

[dependencies]
gctrl-core = { path = "../gctrl-core" }
gctrl-storage = { path = "../gctrl-storage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
